<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_export"
        android:title="@string/menu_export"
        android:icon="@drawable/ic_export"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_delete_all"
        android:title="@string/menu_delete_all"
        android:icon="@drawable/ic_delete"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:title="@string/menu_settings"
        android:icon="@drawable/ic_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_privacy_policy"
        android:title="Chính sách quyền riêng tư"
        android:icon="@drawable/ic_shield"
        app:showAsAction="never" />

</menu>